--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/ArtifactDependenciesIntegrationTest/canHaveCycleInProjectDependencies/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/ArtifactDependenciesIntegrationTest/canHaveCycleInProjectDependencies/build.gradle
@@ -3,6 +3,7 @@ subprojects {
     apply plugin: 'base'
     configurations {
         'default'
+        other
     }
     task jar(type: Jar)
     artifacts {
@@ -13,11 +14,16 @@ subprojects {
 project('a') {
     dependencies {
         'default' project(':b')
+        other project(':b')
     }
     task listJars {
-        dependsOn configurations['default']
+        dependsOn configurations.default
+        dependsOn configurations.other
         doFirst {
-            def jars = configurations['default'].collect { it.name } as Set
+            def jars = configurations.default.collect { it.name } as Set
+            assert jars == ['a.jar', 'b.jar', 'c.jar'] as Set
+
+            jars = configurations.other.collect { it.name } as Set
             assert jars == ['a.jar', 'b.jar', 'c.jar'] as Set
         }
     }
