--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/LoggingIntegrationTest/logging/project1/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/LoggingIntegrationTest/logging/project1/build.gradle
@@ -11,7 +11,7 @@ logger.trace('A trace log message.')
 println 'A message which is logged at QUIET level'
 
 // Should use stdout capture level
-def textOutput = serviceRegistryFactory.get(StyledTextOutputFactory.class).create()
+def textOutput = serviceRegistryFactory.get(StyledTextOutputFactory.class).create('build')
 textOutput.text('Text which is logged at QUIET level').endLine()
 
 logging.captureStandardOutput LogLevel.INFO
