Changed report renderers to write to a StyledTextOutput instead of a Formatter.

--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/LoggingIntegrationTest/multiThreaded/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/LoggingIntegrationTest/multiThreaded/build.gradle
@@ -15,7 +15,7 @@ task log << {
                 textOut.text(thread)
                 textOut.text(' iteration ')
                 textOut.text(iteration)
-                textOut.endLine()
+                textOut.println()
             }
         }
     }
