--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/LoggingIntegrationTest/logging/project1/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/LoggingIntegrationTest/logging/project1/build.gradle
@@ -12,12 +12,12 @@ println 'A message which is logged at QUIET level'
 
 // Should use stdout capture level
 def textOutput = serviceRegistryFactory.get(StyledTextOutputFactory.class).create('build')
-textOutput.text('Text which is logged at QUIET level').endLine()
+textOutput.text('Text which is logged at QUIET level').println()
 
 logging.captureStandardOutput LogLevel.INFO
 println 'A message which is logged at INFO level'
 
-textOutput.text('Text which is logged at INFO level').endLine()
+textOutput.text('Text which is logged at INFO level').println()
 
 System.err.println 'An error message which is logged at ERROR level'
 logging.captureStandardError LogLevel.LIFECYCLE
