--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ import java.util.regex.Pattern
 
 version = new Version(project)
 
-defaultTasks "clean", "assemble"
+defaultTasks 'assemble'
 
 apply plugin: 'java-base'
 
