--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/testng/TestNGIntegrationTest/groovyJdk15Passing/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/testng/TestNGIntegrationTest/groovyJdk15Passing/build.gradle
@@ -9,7 +9,7 @@ repositories {
 dependencies {
 	groovy "org.codehaus.groovy:groovy-all:1.7.0"
 
-    testCompile 'org.testng:testng:5.8:jdk15'
+    testCompile 'org.testng:testng:5.13.1'
 }
 
 test {
