--- a/subprojects/gradle-docs/src/samples/testng/java-jdk15-passing/build.gradle
+++ b/subprojects/gradle-docs/src/samples/testng/java-jdk15-passing/build.gradle
@@ -7,7 +7,7 @@ repositories {
 }
 
 dependencies {
-    testCompile 'org.testng:testng:5.8:jdk15'
+    testCompile 'org.testng:testng:5.13.1'
 }
 
 test {
