--- a/subprojects/gradle-docs/src/samples/testng/suitexmlbuilder/build.gradle
+++ b/subprojects/gradle-docs/src/samples/testng/suitexmlbuilder/build.gradle
@@ -5,7 +5,7 @@ repositories {
 }
 
 dependencies {
-    testCompile 'org.testng:testng:5.8:jdk15'
+    testCompile 'org.testng:testng:5.13.1'
 }
 
 test {
