--- a/build.gradle
+++ b/build.gradle
@@ -339,7 +339,7 @@ task integTest(type: Test, dependsOn: [intTestImage, binZip, allZip, srcZip, ':d
         systemProperties['integTest.gradleHomeDir'] = intTestImage.integTestGradleHome.absolutePath
         def forkArgs
         if (noForkIntegTests()) {
-            systemProperties['org.gradle.integtest.nofork'] = "true"
+            systemProperties['org.gradle.integtest.fork'] = "false"
             jvmArgs '-Xmx512m', '-XX:MaxPermSize=256m', '-XX:+HeapDumpOnOutOfMemoryError'
         } else {
             jvmArgs '-Xmx512m', '-XX:+HeapDumpOnOutOfMemoryError'
