--- a/subprojects/gradle-announce/announce.gradle
+++ b/subprojects/gradle-announce/announce.gradle
@@ -13,6 +13,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+repositories {
+    add(new org.apache.ivy.plugins.resolver.URLResolver()) {
+        name = 'Scribe @ Github'
+        addArtifactPattern 'http://github.com/fernandezpablo85/scribe-java/downloads/[module]-[revision].[ext]'
+    }
+}
+
 dependencies {
     groovy libraries.groovy_depends
 
@@ -22,4 +30,6 @@ dependencies {
 
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
+
+    compile ':scribe:1.0.7'
 }
