GRADLE-1188 - Fixed resolution of relative paths passed to -p, -b, -I, and -c when using the daemon - Changed DefaultCommandLineConverter to resolve paths relative to the current dir in the supplied StartParameter. - Added a int test GradleExecuter implementation which uses the daemon when running int tests - Replaced 'org.gradle.integtest.fork' system property with 'org.gradle.integtest.executer' - Added 'org.gradle.daemon' system property which can be used instead of --daemon - Changed daemon to restore system properties at the end of a build

--- a/build.gradle
+++ b/build.gradle
@@ -342,7 +342,7 @@ task integTest(type: Test, dependsOn: [intTestImage, binZip, allZip, srcZip, ':d
         systemProperties['integTest.gradleHomeDir'] = intTestImage.integTestGradleHome.absolutePath
         def forkArgs
         if (noForkIntegTests()) {
-            systemProperties['org.gradle.integtest.fork'] = "false"
+            systemProperties['org.gradle.integtest.executer'] = 'embedded'
             jvmArgs '-Xmx512m', '-XX:MaxPermSize=256m', '-XX:+HeapDumpOnOutOfMemoryError'
         } else {
             jvmArgs '-Xmx512m', '-XX:+HeapDumpOnOutOfMemoryError'
