GRADLE-1209 - use sourceSets.main.classesDir as the default eclipse output dir. A modified version of a patch supplied by Andrew Phillips.

--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/EclipseIntegrationTest/canCreateAndDeleteMetaData/api/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/EclipseIntegrationTest/canCreateAndDeleteMetaData/api/build.gradle
@@ -1,5 +1,8 @@
+apply plugin: 'java'
+
 dependencies {
     runtime 'commons-collections:commons-collections:3.2@jar'
+    testCompile 'junit:junit:4.7'
 }
 
 sourceSets {
