--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/EclipseIntegrationTest/canCreateAndDeleteMetaData/master/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/EclipseIntegrationTest/canCreateAndDeleteMetaData/master/build.gradle
@@ -18,32 +18,27 @@ allprojects {
 }
 
 subprojects {
-    apply plugin: 'java'
-
     repositories {
         mavenCentral()
     }
 
-    dependencies {
-        testCompile 'junit:junit:4.7'
-    }
-
     group = 'org.gradle'
     version = '1.0'
-
-    eclipseClasspath {
-        downloadJavadoc = true
-        doLast {
-            compareXmlWithIgnoringOrder(file("$rootDir/../expectedFiles/${project.name}Classpath.xml").text,
-                    file(".classpath").text)
-        }
-    }
 }
 
-allprojects {
+allprojects { p ->
     eclipseProject.doLast {
         compareXmlWithIgnoringOrder(file("$rootDir/../expectedFiles/${project.name}Project.xml").text,
                 file(".project").text)
+    }
+    if (hasProperty('eclipseClasspath')) {
+        eclipseClasspath {
+            downloadJavadoc = true
+            doLast {
+                compareXmlWithIgnoringOrder(file("$rootDir/../expectedFiles/${project.name}Classpath.xml").text,
+                        file(".classpath").text)
+            }
+        }
     }
     cleanEclipse.doLast {
         assert !file(".classpath").isFile()
